refactor: deprecated URL changed to URI in ImageService